dress code, minor changes to form errors

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
-<h1> All Items </h1>
+<h1> Please choose an item to value </h1>
 
 <% @posts.each do |post| %>
-<span class="index">
+
 <%= link_to cl_image_tag(post.image, :class => 'thumb'), post %>
-</span>
+
 <% end %>
