--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@
 }
 
  .comment {
-   border: 2px solid lightgrey;
+   border: 2px solid grey;
    padding: 5px;
    margin: 5px;
  }
@@ -40,4 +40,10 @@
 
  .commentBy {
    font-size: 12px;
+ }
+
+ .errors {
+   margin: 0 auto;
+   max-width: 250px;
+   color: red;
  }
