--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,14 +1,20 @@
+
+<div class='newform'>
 <%=  form_for @post, :html => {:multipart => true} do |f| %>
-
-  <%= f.label :title %>
+<div>
+  <%= f.label :title %><br>
   <%= f.text_field :title %>
-
-  <%= f.label :description %>
+</div>
+<div>
+  <%= f.label :description %><br>
   <%= f.text_field :description %>
-
-  <%= f.label :image %>
-  <%= f.cl_image_upload :image, :required => true %>
-
+</div>
+<div>
+  <%= f.label :image %><br>
+  <%= f.cl_image_upload :image, :required => true, :class => 'cloud'%><br>
+</div>
+<div>
   <%= f.submit %>
-
+</div>
+</div>
 <% end %>
